@@ -5,7 +5,8 @@ from __future__ import print_function, absolute_import, division
 
 from ruamel.yaml.error import *  # NOQA
 from ruamel.yaml.nodes import *  # NOQA
-from ruamel.yaml.compat import text_type, binary_type, to_unicode, PY2, PY3, ordereddict
+from ruamel.yaml.compat import text_type, binary_type, to_unicode, PY2, PY3
+from ruamel.yaml.compat import ordereddict  # type: ignore
 from ruamel.yaml.compat import nprint, nprintf  # NOQA
 from ruamel.yaml.scalarstring import (
     LiteralScalarString,
@@ -83,8 +84,8 @@ class BaseRepresenter(object):
         # type: (Any) -> None
         node = self.represent_data(data)
         self.serializer.serialize(node)
-        self.represented_objects = {}  # type: Dict[Any, Any]
-        self.object_keeper = []  # type: List[Any]
+        self.represented_objects = {}
+        self.object_keeper = []
         self.alias_key = None
 
     def represent_data(self, data):
